modified:   index.html 	modified:   main.js 	new file:   prueba.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="botonera">
+          <button class="nuevo-carton" id="nuevo-carton">Nuevo carton</button>
+        </div>
+      </section>
     </main>
     <script src="main.js"></script>
   </body>
