[prueba] Se comienza a trabajar en boton nuevo carton

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <section>
         <div class="botonera">
           <button class="nuevo-carton" id="nuevo-carton">Nuevo carton</button>
+          <button id="prueba">Prueba llenar casilla</button>
         </div>
       </section>
     </main>
