[prueba] Se vuelve a pensar la logica del codigo, queda error de mucha recursion en fila 3 porque al ser tan limitado intenta demasiadas veces. Deberia cambiarse la logica para que cuando el numero generado no este disponible, no busque otra columna, sino que busque un numero mayor en la misma columna

--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
         </div>
       </section>
     </main>
-    <script src="main.js"></script>
+    <script src="prueba.js"></script>
   </body>
 </html>
