[prueba] Se agregan p para calculos

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
           <button class="nuevo-carton" id="nuevo-carton">Nuevo carton</button>
         </div>
       </section>
+      <section>
+        <p>Cantidad de combinaciones posibles de cartones: </p>
+        <p>Probabilidad de adivinar los 15 numeros en 40 cartones: </p>
+      </section>
     </main>
-    <script src="prueba.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
