[prueba] Se agrega calculos de probabilidad

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
       </section>
       <section>
-        <p>Cantidad de combinaciones posibles de cartones: </p>
-        <p>Probabilidad de adivinar los 15 numeros en 40 cartones: </p>
+        <p id="cartones-posibles"></p>
+        <p id="probabilidad"></p>
       </section>
     </main>
     <script src="main.js"></script>
